# indobert-youtube-sentiment

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: cleaning.py  download_model.py  labeling.py  merge.py  merging.py  scrape.py  scraping.py  split.py  splitting.py  test.py  testing.py  train.py  training.py
