[project]
name = "sentiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "beautifulsoup4>=4.14.3",
    "datasets>=4.8.5",
    "evaluate>=0.4.6",
    "huggingface-hub>=1.16.4",
    "lxml>=6.1.1",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "selenium>=4.44.0",
    "torch>=2.12.0",
    "transformers>=5.9.0",
]
